<resources>
    <string name="app_name">Roti King</string>
    <string name="have_a_great_lunch">Have a great lunch</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="terms_privacy"><![CDATA[Terms & Conditions | Privacy Policy]]></string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="continue_">Continue</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up_password">Sign up Password</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp">OTP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify">Verify</string>
    <string name="by_signing_up_you_re_agree_to_our_terms_conditions_and_privacy_policy"><![CDATA[By Signing up, You\'re agree to our Terms & conditions and Privacy policy.]]></string>
    <string name="enter_the_password">Enter the Password</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="hello">Hello</string>
    <string name="search_chapati">Search chapati</string>
    <string name="daily_eats">Daily eats</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="food_name">Food Name</string>
    <string name="food_type">Food Type</string>
    <string name="price">Price</string>
    <string name="_0">0</string>
    <string name="all">All</string>
    <string name="top_tens">Top tens</string>
    <string name="food">food</string>
    <string name="rating">rating</string>
    <string name="_0_per">-0%</string>
    <string name="description_about_the_food_item">Description about the food item.</string>
    <string name="ingredients">Ingredients -</string>
    <string name="includes">includes -</string>
    <string name="available">Available</string>
    <string name="_1">1</string>
    <string name="add_topping">Add Topping</string>
    <string name="go_to_cart">Go to Cart</string>
    <string name="total_price">Total Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="my">My</string>
    <string name="cart_list">Cart List</string>
    <string name="quantity">quantity</string>
    <string name="toppings_added">Toppings Added</string>
    <string name="delivery_price">Delivery Price</string>
    <string name="total_payable">Total Payable</string>
    <string name="place_order">Place Order</string>
    <string name="payment_method">Payment Method</string>
    <string name="checkout">Checkout</string>
    <string name="close">Close</string>
    <string name="order_list">Order List</string>
    <string name="order_name">Order Name</string>
    <string name="all_the_price_are_calculated_with_or_without_discount_depends_on_the_discount_given_on_the_item">All the price are calculated with or without discount depends on the discount given on the item.</string>
    <string name="search">Search</string>
    <string name="your_address">Your Delivery Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="save">Save</string>
    <string name="change_address">Change Address</string>
    <string name="no_address">No Address</string>
    <string name="set_current_location">Set Current Location</string>
    <string name="phone_no">Phone no.</string>
    <string name="your_delivery_details">Your Delivery Details</string>
    <string name="no_phone">No Phone</string>
    <string name="no_name">No Name</string>
    <string name="change_details">Change Details</string>
    <string name="don_t_add_91_in_front_of_the_number">Don\'t add +91 in front of the number.</string>
    <string name="order_0000000">#~order~0000000</string>
    <string name="_0_items">0 Items</string>
    <string name="preparing">Preparing…</string>
    <string name="time">Time</string>
    <string name="order">Order</string>
    <string name="unpaid">unpaid</string>
    <string name="cash">Cash</string>
    <string name="tracking">Tracking</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="delivery_agent_details">Delivery Agent Details</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="ordered">Ordered…</string>
    <string name="delivery_verification_code">Delivery Verification Code</string>
    <string name="share_the_code_to_your_delivery_agent_only_when_you_get_your_food_package">Share the code to your delivery agent only when you get your food package in your hand.</string>
    <string name="_0000">0000</string>
    <string name="order_successful">Order Successful</string>
    <string name="view_order_details">View Order Details</string>
    <string name="your_cart_is_empty">Your cart is empty.</string>
    <string name="you_have_not_ordered_anything">You have not ordered anything.</string>
    <string name="no_food_item_found">No food item found.</string>
    <string name="username">Username</string>
    <string name="these_details_will_be_shared_to_our_delivery_agent_to_contact_you_while_delivering_your_food_package">These details will be shared to our delivery agent to contact you while delivering your food package. Click to Edit the details.</string>
    <string name="logout">logout</string>
    <string name="change_photo">Edit Photo</string>
    <string name="photo">Photo</string>
    <string name="account_recovery">Account Recovery</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="recover">Recover</string>
    <string-array name="payment_method">
        <item>Cash</item>
        <item>Pay Online</item>
    </string-array>
    <string name="rate_this_food_item">Rate this food item.</string>
    <string name="add_new_delivery_details">Add New Delivery Details</string>
    <string name="no_address_saved">No address saved.</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="contact_number">Contact Number</string>
    <string name="licence">Food Licence</string>
    <string name="resent_otp">Resent OTP</string>
    <string-array name="help_type">
        <item>Simple Discussion</item>
        <item>Order Issue</item>
        <item>Order Payment Issue</item>
        <item>Food related Issue</item>
        <item>Topping related Issue</item>
        <item>Delivery related Issue</item>
        <item>Account related Issue</item>
        <item>Account Deletion Issue</item>
    </string-array>
    <string name="title_activity_maps">Rotiking Delivery Tracking</string>
    <string name="track_delivery">Track Delivery</string>
</resources>