<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tabs.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/food"
                    android:scaleType="centerCrop"
                    android:background="@drawable/ic_baseline_account_box_24"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/my_name"
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:lines="1"
                    android:paddingHorizontal="10dp"
                    android:text="@string/full_name"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingHorizontal="10dp"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingHorizontal="10dp"
                    android:text="@string/username" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/edit_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    style="@style/TextButton"
                    android:text="@string/change_photo"
                    android:layout_gravity="start"
                    android:paddingHorizontal="10dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/delivery_address_desk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border_block"
            android:padding="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_address"
                style="@style/Text"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:text="@string/these_details_will_be_shared_to_our_delivery_agent_to_contact_you_while_delivering_your_food_package"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_name" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_address" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_phone" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/TextButton"
            android:text="@string/logout"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>