<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".sheets.AddressBottomSheet"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_delivery_details"
        android:textSize="17sp"
        style="@style/Text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        style="@style/Text"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:padding="10dp"
        android:gravity="top"
        android:inputType="textPersonName"
        android:background="@drawable/border_block"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_no"
        style="@style/Text"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_no"
        android:padding="10dp"
        android:gravity="top"
        android:inputType="phone"
        android:background="@drawable/border_block"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:text="@string/don_t_add_91_in_front_of_the_number"
        android:paddingHorizontal="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_address"
        style="@style/Text"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/enter_your_address"
        android:padding="10dp"
        android:gravity="top"
        android:lines="2"
        android:background="@drawable/border_block"
        android:layout_marginTop="5dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_address"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="20sp"
        android:text="@string/save" />

</LinearLayout>