<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpSupportActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            style="@style/ImgTextLogo"
            android:contentDescription="@string/app_name" />

        <ImageButton
            android:id="@+id/close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_baseline_close_24" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text"
            android:text="@string/help_support"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:background="@drawable/border_block"
            android:layout_marginTop="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/help_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:entries="@array/help_type"
            android:background="@drawable/border_block"
            android:layout_marginTop="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/message"
            android:padding="10dp"
            android:background="@drawable/border_block"
            android:layout_marginTop="2dp"
            android:gravity="start"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:layout_marginTop="20dp"
            android:text="@string/send"/>

        <TextView
            android:id="@+id/terms_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_privacy"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>