<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="150dp"
    android:layout_height="230dp"
    android:layout_margin="5dp"
    android:background="@drawable/border_block"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/food"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@drawable/round_dark_bg"
            android:orientation="horizontal"
            android:padding="2dp"
            tools:ignore="RelativeOverlap">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/rating"
                android:src="@drawable/ic_baseline_star_rate_24" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingHorizontal="5dp"
                android:text="@string/_0"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:background="@drawable/round_dark_bg"
            android:backgroundTint="@color/green"
            android:paddingHorizontal="5dp"
            android:text="@string/_0_per"
            android:textColor="@color/white"
            android:textStyle="italic" />

    </RelativeLayout>

    <TextView
        android:id="@+id/name"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:lines="1"
        android:paddingHorizontal="10dp"
        android:text="@string/food_name"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/food_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:paddingHorizontal="10dp"
        android:text="@string/food_type" />

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:paddingHorizontal="10dp"
        android:text="@string/price" />

</LinearLayout>