<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderSuccessActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            style="@style/ImgTextLogo"
            android:contentDescription="@string/app_name"/>

        <ImageButton
            android:id="@+id/close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_baseline_close_24" />

    </RelativeLayout>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/order_success"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/order_successful"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_successful"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        style="@style/Text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/view_order_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_order_details"
        style="@style/Button"
        android:padding="20sp"
        android:layout_marginTop="20sp"/>

</LinearLayout>